tests: use custom test-driver for specific tests
This patch is just used to showcase what can be done
with a custom test-driver, how it could improve testing
and logging of information, and maybe allow for
benchmarking of each test.

Change-Id: Ia9ecdc7271f1cb0aef218aacbaef077ed88401a0
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10951
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -27,6 +27,8 @@ VALGRIND_FLAGS=-q --leak-check=full --errors-for-leak-kinds=definite --show-poss
 endif
 
 TEST_EXTENSIONS=.sh
+TEST_EXTENSIONS+=.test
+TEST_LOG_DRIVER=$(TO_TEST)/test-driver
 
 check_PROGRAMS=test_bad_comm \
                test_concurrency \
@@ -41,14 +43,14 @@ check_PROGRAMS=test_bad_comm \
                test_undelete
 
 check_SCRIPTS=test_bad_comm.sh \
-              test_concurrency.sh \
-              test_delete.sh \
+              test_concurrency.test \
+              test_delete.test \
               test_dss.sh \
+              test_store.test \
               test_locate.sh \
               test_lock_clean.sh \
               test_raid1_split_locate.sh \
               test_scsi.sh \
-              test_store.sh \
               test_store_retry.sh \
               test_undelete.sh
 
