pkg: update specfile and makefile for rados
Update the spec file to comply with the new rados
package and properly manage the libraries
corresponding to each module.

Also add phobos-devel dependencies.

Change-Id: I2e672d6aa0996db87393bef4baaa3f9b7c26dac3
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10981
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,9 +4,15 @@ SUBDIRS=. src tests/externs/api tests/externs/cli tests/interns tests/prod
 
 rpm_dir=`pwd`/rpms
 
+options =
+
+if RADOS_ENABLED
+options += --with=rados
+endif
+
 rpm: dist phobos.spec
 	mkdir -p $(rpm_dir)/BUILD $(rpm_dir)/SPECS $(rpm_dir)/SRPMS $(rpm_dir)/RPMS
-	rpmbuild --define="_topdir $(rpm_dir)" -ta $(distdir).tar.gz
+	rpmbuild $(options) --define="_topdir $(rpm_dir)" -ta $(distdir).tar.gz
 
 EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper \
 	    scripts/phobos_db README.md doc/cfg/template.conf
