tests: add support for get and format in put_then_release
Change-Id: I82a6ddedf3be718f846fa6b2c2166ab11ab60445
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11009
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -34,7 +34,7 @@ endif
 
 TEST_EXTENSIONS=.sh
 
-check_PROGRAMS=put_then_release \
+check_PROGRAMS=lrs_simple_client \
                medium_locker
 
 check_SCRIPTS=acceptance.sh \
@@ -64,10 +64,10 @@ endif
 
 TESTS=$(check_SCRIPTS)
 
-put_then_release_SOURCES=put_then_release.c
-put_then_release_LDADD=$(LRS_LIB) $(CFG_LIB) $(COMMON_LIB) \
-                          $(COMMUNICATION_LIB) $(SERIALIZER_LIB)
-put_then_release_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
+lrs_simple_client_SOURCES=lrs_simple_client.c
+lrs_simple_client_LDADD=$(LRS_LIB) $(CFG_LIB) $(COMMON_LIB) \
+                        $(COMMUNICATION_LIB) $(SERIALIZER_LIB)
+lrs_simple_client_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
 
 medium_locker_SOURCES=medium_locker.c
 medium_locker_LDADD=$(DSS_LIB) $(STORE_LIB)
