package: update lib path in specfile and add dep
Change-Id: Ia91ff3561921cc0074d127bfe47678888b24577c
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11014
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -39,6 +39,7 @@ BuildRequires: systemd
 BuildRequires: autoconf
 BuildRequires: automake
 BuildRequires: libtool
+BuildRequires: make
 
 Requires: %{postgres_prefix}-server
 Requires: %{postgres_prefix}-contrib
@@ -123,7 +124,7 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_*.a
 rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_*.la
 
 mkdir -p %{buildroot}/%{_sysconfdir}/ld.so.conf.d/
-echo "/usr/lib/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
+echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 
 %files
 
