--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -27,6 +27,24 @@ sync_nb_req = tape=5,dir=5
 # positive value, greater than 0 and lesser or equal than 2^54
 sync_wsize_kb = tape=1048576,dir=1048576
 
+# I/O scheduling algorithms for dir family
+[io_sched_dir]
+# Scheduling algorithm used for read requests
+# Supported algorithms: fifo, grouped_read
+read_algo = fifo
+# Scheduling algorithm used for write requests
+# Supported algorithms: fifo
+write_algo = fifo
+# Scheduling algorithm used for format requests
+# Supported algorithms: fifo
+format_algo = fifo
+
+# Same as io_sched_dir section but for tape family
+[io_sched_tape]
+read_algo = grouped_read
+write_algo = fifo
+format_algo = fifo
+
 [scsi]
 # retry count for SCSI requests
 retry_count    = 5
