tests: use db name specified in cfg in all tests
This patch modifies the setup files and tests to use
the same DB, whose name is specified in the test cfg
file.

Change-Id: I7a10edba5d663e310a82176fc0ee18764e197d96
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11204
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -1,5 +1,5 @@
 [dss]
-connect_string = dbname=phobos host=localhost user=phobos password=phobos
+connect_string = dbname=phobos_test host=localhost user=phobos password=phobos
 
 [lrs]
 server_socket = /tmp/socklrs
