io_sched: load device_dispatch algorithm from configuration
Change-Id: Ia02504d3afb8e5efff4633bf56230aa878057c5d
Signed-off-by: courrierg <courrierg@u-un00308687>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11126
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -38,12 +38,28 @@ write_algo = fifo
 # Scheduling algorithm used for format requests
 # Supported algorithms: fifo
 format_algo = fifo
+# Only none is supported for dirs
+dispatch_algo = none
 
 # Same as io_sched_dir section but for tape family
 [io_sched_tape]
 read_algo = grouped_read
 write_algo = fifo
 format_algo = fifo
+
+# Algorithm which perform the repartition of device to I/O schedulers
+# Supported algorithms:
+# - none: any device can be used for any request
+# - fair_share: allocate devices to schedulers based on the systems' load (tape
+#   only)
+dispatch_algo = fair_share
+# Minimum number of LTO5 drives for read, write and formats respectively
+fair_share_LTO5_min = 0,0,0
+# Maximum number of LTO5 drives for read, write and formats respectively
+fair_share_LTO5_max = 5,0,0
+
+fair_share_LTO6_min = 2,1,0
+fair_share_LTO6_max = 5,5,1
 
 [scsi]
 # retry count for SCSI requests
