tape_certif: phobos_tape_library_test
This executable allows to test if a tape library behaves
correctly when phobos loads and unloads tape into drives.

Change-Id: I48ed5299d9b426505d1cd08e79fc52b8512da41c
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11110
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 ACLOCAL_AMFLAGS = -I autotools/m4
 
-SUBDIRS=. src tests/externs/api tests/externs/cli tests/interns tests/prod
+SUBDIRS=. src tests/externs/api tests/externs/cli tests/interns tests/prod \
+        tape_library_certification
 
 rpm_dir=`pwd`/rpms
 
