--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -145,6 +145,8 @@ echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 %{_sbindir}/phobosd
 %{_unitdir}/phobosd.service
 %{_sysconfdir}/ld.so.conf.d/phobos.conf
+%{_sbindir}/phobos_tape_library_test
+%{_sbindir}/phobos_tape_library_mtx_test.bash
 
 %config(noreplace) %{_sysconfdir}/phobos.conf
 %dir %{phobosdocdir}
