tape_certif: phobos_tape_library_test.bash
This wrapper helps to executes the corresponding binary test by
looking into the phobos database to find drive serial numbers.

Change-Id: If8dfc61d5f44b2c00fbcec1d72b8ad74c7096315
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11123
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tape_library_certification/Makefile.am
+++ b/tape_library_certification/Makefile.am
@@ -1,8 +1,8 @@
 AM_CFLAGS= $(CC_OPT)
 
-EXTRA_DIST= phobos_tape_library_mtx_test.bash
+EXTRA_DIST= phobos_tape_library_mtx_test.bash phobos_tape_library_test.bash
 
-sbin_SCRIPTS=phobos_tape_library_mtx_test.bash
+sbin_SCRIPTS=phobos_tape_library_mtx_test.bash phobos_tape_library_test.bash
 sbin_PROGRAMS=phobos_tape_library_test
 
 phobos_tape_library_test_SOURCES=phobos_tape_library_test.c
