--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -2,5 +2,6 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_common.la
 
-libpho_common_la_SOURCES=common.c attrs.c type_utils.c log.c saj.c slist.c
+libpho_common_la_SOURCES=common.c attrs.c type_utils.c log.c saj.c slist.c \
+                         global_state.c
 libpho_common_la_LIBADD=-ljansson -lm
