test: add test_phobos_tape_library_test.sh
Change-Id: I6742777394fe7c35939dae2ffc3ef579a26486af
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11161
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -51,6 +51,7 @@ check_SCRIPTS=acceptance.sh \
               test_lock_clean.sh \
               test_media.sh \
               test_object_list.sh \
+              test_phobos_tape_library_test.sh \
               test_ping.sh \
               test_put.sh \
               test_raid1_split.sh \
