io_sched: properly handle the device model
The technology of a drive can be infered from its model.
We first have to list all the technologies that can be handled
by Phobos ('supported_list' in the section 'tape_model').
Then, we look for the model of the drive ('models' in
'drive_type "<techno>_drive"').

As this process is complex, the result is cached in
lrs_dev::ld_technology.

Change-Id: Ib97c9daac481e824b9e0f30a412cb466a3ab7c73
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11172
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -16,6 +16,9 @@ models = ULTRIUM-TD5,ULT3580-TD5,ULTRIUM-HH5,ULT3580-HH5,HH LTO Gen 5
 [drive_type "LTO6_drive"]
 models = ULTRIUM-TD6,ULT3580-TD6,ULTRIUM-HH6,ULT3580-HH6,HH LTO Gen 6
 
+[drive_type "LTO7_drive"]
+models = ULTRIUM-TD7,ULT3580-TD7,ULTRIUM-HH7,ULT3580-HH7,HH LTO Gen 7
+
 [tape_type "LTO5"]
 drive_rw = LTO5_drive,LTO6_drive
 
