lrs: use a semaphore to control the number of concurrent lookup/move
Three configuration parameters are added to the scsi section:
- concurrent_lookups, concurrent_moves: number of concurrent lookups or
  moves allowed;
- exclusive_move_and_lookup: whether a lookup can be executed while
  moves are executed. If set to true, concurrent_lookups is set to
  1.

Change-Id: I87747facffd5dd32f6028e17f826e16855b1d6e9
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11181
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -59,6 +59,23 @@ query_timeout_ms = 1000
 # timeout of a SCSI move request in ms
 move_timeout_ms = 300000
 
+# Some libraries may block on MODE_SENSE and READ_ELEMENT_STATUS (lookups) as
+# long as a MOVE_MEDIUM (moves) is being executed. When
+# exclusive_move_and_lookup is set to true, lookups will wait for concurrent
+# moves to be finished before being executed. If not set, it is considered
+# "true" as this is the safest behavior. Any value other than false is considered
+# true.
+exclusive_move_and_lookup = true
+
+# concurrent_moves and concurrent_lookups represent the maximum number of
+# moves and lookups allowed. They are independant, meaning that the number of
+# lookups allowed concurrently is not affected by the number of moves and vice
+# versa, as long as "exclusive_move_and_lookup" is false. If set to 0, no
+# restriction is applied. If exclusive_move_and_lookup is set to true,
+# concurrent_lookups is set to 1 regardless of the actual value.
+concurrent_lookups = 1
+concurrent_moves = 0
+
 [lib_scsi]
 # Query drive serial number and volume label as separate requests
 # in case the library can't report both (e.g. IBM library).
