scsi ldm: move and query timeout in conf
Change-Id: I3bf61f4cf81b3845b9432e516857489649b4f24f
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11202
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -54,6 +54,10 @@ retry_short    = 1
 retry_long     = 5
 # chunk size for element status requests (0=unlimited)
 max_element_status = 0
+# timeout of a SCSI query request in ms
+query_timeout_ms = 1000
+# timeout of a SCSI move request in ms
+move_timeout_ms = 300000
 
 [lib_scsi]
 # Query drive serial number and volume label as separate requests
