--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -69,6 +69,7 @@ in a SCSI library and local directories.
 %package devel
 Summary: C API for Phobos Object Store.
 
+Requires: phobos
 Requires: glib2-devel >= 2.28
 Requires: jansson-devel >= 2.5
 
