ldm_lib_scsi: protect every scsi lib call with a mutex
Change-Id: I13cc33e594d30fff6426646ac6a63bf09c48cd00
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11269
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/src/ldm-modules/Makefile.am
+++ b/src/ldm-modules/Makefile.am
@@ -29,9 +29,7 @@ libpho_dev_adapter_dir_la_LDFLAGS=-version-info 0:0:0
 
 libpho_dev_adapter_scsi_tape_la_SOURCES=ldm_dev_scsi_tape.c
 libpho_dev_adapter_scsi_tape_la_CFLAGS=-fPIC $(AM_CFLAGS)
-libpho_dev_adapter_scsi_tape_la_LIBADD=../common/libpho_common.la \
-                                       libpho_scsi.la \
-                                       ../cfg/libpho_cfg.la
+libpho_dev_adapter_scsi_tape_la_LIBADD=../common/libpho_common.la
 libpho_dev_adapter_scsi_tape_la_LDFLAGS=-version-info 0:0:0
 
 libpho_fs_adapter_posix_la_SOURCES=ldm_fs_posix.c ldm_common.c
