layout: compute and store extent md5
Change-Id: I35396897b732f994c52e4df1be73c1d21eae5e21
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11306
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -57,7 +57,7 @@ AC_CHECK_SIZEOF([size_t])
 PKG_CHECK_MODULES(GLIB2, [glib-2.0])
 PKG_CHECK_MODULES(GTHREAD2, [gthread-2.0])
 CFLAGS="$CFLAGS $GLIB2_CFLAGS $GTHREAD2_CFLAGS"
-LDFLAGS="$LDFLAGS $GLIB2_LIBS $GTHREAD2_LIBS"
+LDFLAGS="$LDFLAGS $GLIB2_LIBS $GTHREAD2_LIBS -lcrypto"
 
 AC_CHECK_FUNC([g_list_free_full], AC_DEFINE(HAVE_GLIB_FREE_FULL, 1, [g_list_free_full is available since glib 2.28]))
 
