--- a/src/cfg/Makefile.am
+++ b/src/cfg/Makefile.am
@@ -2,5 +2,5 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_cfg.la
 
-libpho_cfg_la_SOURCES=cfg.c
+libpho_cfg_la_SOURCES=cfg.c compatibility.c
 libpho_cfg_la_LIBADD=-lini_config
