lrs: take client I/O error into account
When a client sends a release request with an error, we will
stop using the medium. A call to ldm_fs_df will be executed.
If the client encounters an error due to a lack of space on
the medium, the status will be updated accordingly.

Since the LRS is supposed to give a medium with enough space
for a write, this should not happen in practice. Therefore,
the medium and device will be set to failed.

Change-Id: I2963c73a0317e01581c4876e0febc94eef1cf141
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11402
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -62,7 +62,8 @@ endif
 TESTS=$(check_SCRIPTS)
 
 test_bad_comm_SOURCES=test_bad_comm.c
-test_bad_comm_LDADD=$(COMMON_LIB) $(COMMUNICATION_LIB) $(SERIALIZER_LIB)
+test_bad_comm_LDADD=$(DSS_LIB) $(CFG_LIB) $(COMMON_LIB) $(COMMUNICATION_LIB) \
+                    $(SERIALIZER_LIB)
 test_bad_comm_CFLAGS=-I$(TO_TEST)
 
 test_concurrency_SOURCES=test_concurrency.c
