tests: add execution flag to test-driver
test-driver is renamed test-driver.sh because checkpatch
doesn't allow adding the executable flag otherwise.

Change-Id: I66d30ad3617cb9ec3b26b4f5b70ad9703b9e9107
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11400
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -28,7 +28,7 @@ endif
 
 TEST_EXTENSIONS=.sh
 TEST_EXTENSIONS+=.test
-TEST_LOG_DRIVER=$(TO_TEST)/test-driver
+TEST_LOG_DRIVER=$(TO_TEST)/test-driver.sh
 
 check_PROGRAMS=test_bad_comm \
                test_concurrency \
