tests: update test_daemon_scheduling.sh to use new test-driver
Change-Id: Icba95c2b3d6f2a063c1913a163752d59f8bd5252
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11451
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -43,7 +43,7 @@ check_PROGRAMS=lrs_simple_client \
 check_SCRIPTS=acceptance.test \
               test_daemon.sh \
               test_daemon_monitoring.sh \
-              test_daemon_scheduling.sh \
+              test_daemon_scheduling.test \
               test_delete.sh \
               test_extent_list.sh \
               test_format.sh \
