layout: extent md5 enabled by configuration
Change-Id: I52c745f84365121f683d974449f28ad61863f46e
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11454
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -88,6 +88,10 @@ default_alias = simple
 [layout_raid1]
 # number of data replicates for raid1 layout (default is 2)
 repl_count = 2
+# Active the md5 calculation at creation of a new extent.
+# Any other value than "yes" disables the md5 calculation of each extent.
+# default: yes
+#extent_md5 = yes
 
 [alias "simple"]
 # default alias for put operations
