io-sched: add integration test for the fair share algorithm
Since the fair share algorithm is complex to test precisely, this test
will setup different environments, run demo_fair_share for a while
and make sure that every request succeeded at the end.

This patch only introduces the structure of the test.

Change-Id: Iafe770a4b859cb627f0d08dcbeb4cf8f5eeff845
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11580
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -41,6 +41,7 @@ check_PROGRAMS=lrs_simple_client \
                medium_locker
 
 check_SCRIPTS=acceptance.test \
+              test_fair_share.test \
               test_daemon.sh \
               test_daemon_monitoring.sh \
               test_daemon_scheduling.test \
