tlc: first empty process
This patch creates the TLC, which currently only manages the phobos
global context and then waits for SIGTERM or SIGINT signals to stop.

This patch also adds the first TLC test to check if SIGTERM
and SIGINT are well managed by the process.

Change-Id: I6e8f348a1cc78473102ab19b1d8ebe4e95bccafc
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11638
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -137,6 +137,7 @@ AC_CONFIG_FILES([Makefile
          src/ldm-modules/Makefile
          src/admin/Makefile
          src/cli/Makefile
+         src/tlc/Makefile
          tests/interns/Makefile
          tests/externs/api/Makefile
          tests/externs/cli/Makefile
