tlc: daemonizing the TLC
This patch allows to transform the TLC process to a daemon one.
Corresponding systemctl unit files are also added.

Daemon stuff is mutualized between the LRS and the TLC.

Change-Id: I1c1f72484b862501a3c3e9a5939defa3fec86b14
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11658
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -32,7 +32,9 @@ phobosd_LDADD=../dss/libpho_dss.la \
               ../io/libpho_io.la \
               ../serializer/libpho_serializer.la \
               ../communication/libpho_comm.la \
-              ../common/libpho_common.la
+              ../common/libpho_common.la \
+              ../daemon/libpho_daemon.la
+
 phobosd_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
 libpho_lrs_la_SOURCES=lrs_cfg.c lrs_sched.c lrs_device.c lrs_thread.c \
