--- a/configure.ac
+++ b/configure.ac
@@ -138,6 +138,7 @@ AC_CONFIG_FILES([Makefile
          src/admin/Makefile
          src/cli/Makefile
          src/tlc/Makefile
+         src/daemon/Makefile
          tests/interns/Makefile
          tests/externs/api/Makefile
          tests/externs/cli/Makefile
