--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS= $(CC_OPT)
 
 SUBDIRS=proto include common communication module-loader ldm dss cfg \
-        ldm-modules io io-modules layout serializer store admin lrs \
+        daemon ldm-modules io io-modules layout serializer store admin lrs \
         layout-modules cli tlc
