--- a/src/tlc/tlc.service
+++ b/src/tlc/tlc.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Phobos Local Resource Scheduler (LRS) daemon
+Description=Tape Library Controler (TLC) daemon
 
 [Service]
 Type=forking
@@ -7,10 +7,10 @@ Type=forking
 # whole control group after 5 minutes
 KillMode=mixed
 TimeoutStopSec=300
-Environment="DAEMON_PID_FILEPATH=/run/phobosd/phobosd.pid"
-RuntimeDirectory=phobosd
-PIDFile=/run/phobosd/phobosd.pid
-ExecStart=/usr/sbin/phobosd
+Environment="DAEMON_PID_FILEPATH=/run/tlc/tlc.pid"
+RuntimeDirectory=tlc
+PIDFile=/run/tlc/tlc.pid
+ExecStart=/usr/sbin/tlc
 
 [Install]
 WantedBy=multi-user.target
