doc: specify what the replica count means
This patch updates the documentation for the raid1 layout API and
configuration file to specify what exactly Phobos implies when we talk
about the "replica count".

This value is the number of data replicas, so a replica count of 1
means that there is only one copy of the data (the original), and 0
additional copies of it. Therefore, a replica count of 2 means the
original copy of the data, plus 1 additional copy.

Change-Id: Id4ee1a847535161d92aaf67ee80155c1f5c6de7f
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11655
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -102,18 +102,23 @@ default_alias = simple
 #io_block_size = 1048576
 
 [layout_raid1]
-# number of data replicates for raid1 layout (default is 2)
+# number of data replicas, so a replica count of 1 means that there is only
+# one copy of the data (the original), and 0 additional copies of it. Therefore,
+# a replica count of 2 means the original copy of the data, plus 1 additional
+# copy.
+# default is 2.
 repl_count = 2
-# Activate the XXH128 calculation at creation of a new extent.
-# (In environments where xxhash has a version lower than 0.8.0, this parameter
-# is ignored and the xxh128 is not computed. If set to "yes", the client will
-# issue a warning to indicate this inconsistency.)
-# Any other value than "yes" disables the XXH128 calculation of extent hash.
+
+# Activate the XXH128 calculation at creation of a new extent. (In environments
+# where xxhash has a version lower than 0.8.0, this parameter is ignored and the
+# xxh128 is not computed. If set to "yes", the client will issue a warning to
+# indicate this inconsistency.) Any other value than "yes" disables the XXH128
+# calculation of extent hash.
 # default: yes (no if xxh128 is not available)
 #extent_xxh128 = yes
 
-# Activate the MD5 calculation at creation of a new extent.
-# Any other value than "yes" disables the MD5 calculation of each extent.
+# Activate the MD5 calculation at creation of a new extent. Any other value
+# than "yes" disables the MD5 calculation of each extent.
 # default: no (yes if xxh128 is not available)
 #extent_md5 = no
 
