raid1: added setxattr for md5 and xxh128
This patch adds setxattr of hashs on the files created after a put
in order to prepare for medium import.

This patch also adds the corresponding test which will also check
that a file created after a put contains all necessary information
for an import.

Change-Id: Ic2f12bc3ad698093b9d78bb741b805c20e3bfca4
Signed-off-by: Alexis GULLO <alexis.gullo.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11659
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -48,6 +48,7 @@ check_SCRIPTS=acceptance.test \
               test_delete.sh \
               test_extent_list.sh \
               test_fair_share.test \
+              test_file_after_put.test \
               test_format.sh \
               test_get.sh \
               test_group_sync.sh \
